Fix display camera video - bug: blurry canvas representation

--- a/CSS_Files/pages.css
+++ b/CSS_Files/pages.css
@@ -41,16 +41,19 @@
 
 #camera-video {
 	/* Do not display. This is only used to interpret video files and send to canvas */
-	display: none;
+	display: block;
+	width: 1280px;
+	height: 720px;
 }
 
 #video_canvas2 {
-	width: 960px;
-	height: 540px;
+	width: 1280px;
+	height: 720px;
 	margin-left: auto;
 	margin-right: auto;
 	padding-left: 0;
 	padding-right: 0;
+	background: black;
 }
 
 #mirrorcheck2 {
